# aruco_env

./: arm_camera_example1.py  aruco_6d_udp_jh.py  aruco_multi_3d.py  aruco_multi_6d.py  aruco_multi_6d_kdh.py  udp_aruco_6d_pos.py  udp_example.py
rbpodo/: CMakeLists.txt
rbpodo/kjh/: aruco_move.cpp  get_data.cpp  move_data.cpp
